Added prefix to URL

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -96,7 +96,8 @@
     "buttons": {
         "readMore": "اقرأ المزيد",
         "learnMore": "اعرف المزيد",
-        "contactUs": "اتصل بنا"
+        "contactUs": "اتصل بنا",
+        "bookAppointment": "حجز موعد"
     },
     "common": {
         "loading": "جاري التحميل...",
@@ -110,8 +111,12 @@
             "address": "شارع إيلي لانداو 7، هرتسليا، إسرائيل"
         },
         "mainTitle": {
-            "title": "صالون التدليك يقدم أنواع مختلفة من التدليك ودورات التدليك بأسعار ممتازة",
-            "description": "بالنسبة لنا، التدليك هو عن الحب. سيساعد التدليك في تحسين حالتك وضبط جسمك للشفاء الذاتي. تعال إلى مركز أجنحة الرياح، ثق بالأساتذة ذوي الخبرة الذين سيضعون برنامجًا فريدًا خصيصًا لك، بما في ذلك الإجراءات الأكثر فعالية ونتائجًا."
+            "title": "دكتور سيرجي تونيتسكي - أمراض النساء الحديثة والعلاج الجراحي",
+            "description": "د. سيرجي تونيتسكي هو طبيب نساء إسرائيلي مشهور، أخصائي من أعلى فئة وخبير معترف به في علاج جميع أشكال العقم الأنثوي وأمراض الجهاز التناسلي الأنثوي. يطبق بروتوكولات سريرية حديثة وتقنيات جراحية طفيفة التوغل ونهج فردي لكل مريضة.\n\nتتجاوز خبرة د. تونيتسكي السريرية 25 عاماً. خبرته في التشخيص والعلاج الجراحي والوقاية من الأمراض النسائية تجعله أحد أكثر الأخصائيين طلباً في إسرائيل.",
+            "biography": "السيرة الذاتية والخبرة السريرية",
+            "biographyText": "تقدم د. سيرجي تونيتسكي من خريج معهد طبي إلى طبيب رئيسي في قسم النساء والجراح الرئيسي.\n\nالمناصب السريرية:\n• طبيب رئيسي في قسم النساء في مستشفى هيلل يافي\n• طبيب نساء رئيسي في مركز هرتسليا الطبي\n\nيجمع بين الممارسة السريرية والأنشطة التعليمية والمشاركة في المؤتمرات الدولية لأمراض النساء، ويحسن باستمرار مهاراته المهنية.",
+            "subtitle": "خبير في صحة المرأة",
+            "learnMore": "اعرف المزيد"
         },
         "attributes": {
             "massageTitle": "العناصر الرئيسية للتدليك",
@@ -152,19 +157,6 @@
         "accessibilityStatement": "بيان إمكانية الوصول",
         "sitemap": "خريطة الموقع",
         "designBy": "التصميم والترويج بواسطة"
-    },
-    "buttons": {
-        "bookAppointment": "حجز موعد"
-    },
-    "info": {
-        "mainTitle": {
-            "title": "دكتور سيرجي تونيتسكي - أمراض النساء الحديثة والعلاج الجراحي",
-            "description": "د. سيرجي تونيتسكي هو طبيب نساء إسرائيلي مشهور، أخصائي من أعلى فئة وخبير معترف به في علاج جميع أشكال العقم الأنثوي وأمراض الجهاز التناسلي الأنثوي. يطبق بروتوكولات سريرية حديثة وتقنيات جراحية طفيفة التوغل ونهج فردي لكل مريضة.\n\nتتجاوز خبرة د. تونيتسكي السريرية 25 عاماً. خبرته في التشخيص والعلاج الجراحي والوقاية من الأمراض النسائية تجعله أحد أكثر الأخصائيين طلباً في إسرائيل.",
-            "biography": "السيرة الذاتية والخبرة السريرية",
-            "biographyText": "تقدم د. سيرجي تونيتسكي من خريج معهد طبي إلى طبيب رئيسي في قسم النساء والجراح الرئيسي.\n\nالمناصب السريرية:\n• طبيب رئيسي في قسم النساء في مستشفى هيلل يافي\n• طبيب نساء رئيسي في مركز هرتسليا الطبي\n\nيجمع بين الممارسة السريرية والأنشطة التعليمية والمشاركة في المؤتمرات الدولية لأمراض النساء، ويحسن باستمرار مهاراته المهنية.",
-            "subtitle": "خبير في صحة المرأة",
-            "learnMore": "اعرف المزيد"
-        }
     },
     "trustCareBanner": {
         "title": "الثقة والرعاية — مصدر سلامك وصحتك"
