--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -96,7 +96,8 @@
   "buttons": {
     "readMore": "קרא עוד",
     "learnMore": "למד עוד",
-    "contactUs": "צור קשר"
+    "contactUs": "צור קשר",
+    "bookAppointment": "קבע תור"
   },
   "common": {
     "loading": "טוען...",
@@ -110,8 +111,12 @@
       "address": "רח' אלי לנדאו 7, הרצליה, ישראל"
     },
     "mainTitle": {
-      "title": "סלון עיסוי מציע סוגי עיסוי שונים וקורסי עיסוי במחירים מעולים",
-      "description": "עבורנו עיסוי זה על אהבה. עיסוי יעזור לשפר את מצבכם ולכוון את הגוף לריפוי עצמי. בואו למרכז כנפי הרוח, סמכו על מומחים מנוסים שיכינו עבורכם תוכנית ייחודית, הכוללת את ההליכים היעילים והתוצאות ביותר."
+      "title": "דוקטור סרגיי טוניצקי - גינקולוגיה מודרנית וטיפול כירורגי",
+      "description": "ד\"ר סרגיי טוניצקי הוא גינקולוג ישראלי מוכר, מומחה מהקטגוריה הגבוהה ביותר ומומחה מוכר בטיפול בכל צורות אי הפוריות הנשית ומחלות מערכת הרבייה הנשית. הוא מיישם פרוטוקולים קליניים מודרניים, טכניקות כירורגיות פולשניות מינימלית וגישה אישית לכל מטופלת.\n\nהניסיון הקליני של ד\"ר טוניצקי עולה על 25 שנה. המומחיות שלו באבחון, טיפול כירורגי ומניעת מחלות גינקולוגיות הופכת אותו לאחד המומחים המבוקשים ביותר בישראל.",
+      "biography": "ביוגרפיה וניסיון קליני",
+      "biographyText": "ד\"ר סרגיי טוניצקי התקדם מבוגר מכון רפואי לרופא ראשי במחלקה הגינקולוגית וכירורג מוביל.\n\nתפקידים קליניים:\n• רופא ראשי במחלקה הגינקולוגית בבית החולים הילל יפה\n• גינקולוג מוביל במרכז הרפואי הרצליה\n\nהוא משלב פרקטיקה קלינית, פעילות הוראה והשתתפות בכנסים בינלאומיים בגינקולוגיה, ומשפר ללא הרף את כישוריו המקצועיים.",
+      "subtitle": "מומחה לבריאות נשים",
+      "learnMore": "למד עוד"
     },
     "attributes": {
       "massageTitle": "אלמנטים עיקריים של עיסוי",
@@ -152,19 +157,6 @@
     "accessibilityStatement": "הצהרת נגישות",
     "sitemap": "מפת האתר",
     "designBy": "עיצוב וקידום על ידי"
-  },
-  "buttons": {
-    "bookAppointment": "קבע תור"
-  },
-  "info": {
-    "mainTitle": {
-      "title": "דוקטור סרגיי טוניצקי - גינקולוגיה מודרנית וטיפול כירורגי",
-      "description": "ד\"ר סרגיי טוניצקי הוא גינקולוג ישראלי מוכר, מומחה מהקטגוריה הגבוהה ביותר ומומחה מוכר בטיפול בכל צורות אי הפוריות הנשית ומחלות מערכת הרבייה הנשית. הוא מיישם פרוטוקולים קליניים מודרניים, טכניקות כירורגיות פולשניות מינימלית וגישה אישית לכל מטופלת.\n\nהניסיון הקליני של ד\"ר טוניצקי עולה על 25 שנה. המומחיות שלו באבחון, טיפול כירורגי ומניעת מחלות גינקולוגיות הופכת אותו לאחד המומחים המבוקשים ביותר בישראל.",
-      "biography": "ביוגרפיה וניסיון קליני",
-      "biographyText": "ד\"ר סרגיי טוניצקי התקדם מבוגר מכון רפואי לרופא ראשי במחלקה הגינקולוגית וכירורג מוביל.\n\nתפקידים קליניים:\n• רופא ראשי במחלקה הגינקולוגית בבית החולים הילל יפה\n• גינקולוג מוביל במרכז הרפואי הרצליה\n\nהוא משלב פרקטיקה קלינית, פעילות הוראה והשתתפות בכנסים בינלאומיים בגינקולוגיה, ומשפר ללא הרף את כישוריו המקצועיים.",
-      "subtitle": "מומחה לבריאות נשים",
-      "learnMore": "למד עוד"
-    }
   },
   "trustCareBanner": {
     "title": "אמון וטיפול — מקור השלום והבריאות שלך"
