--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -96,7 +96,8 @@
     "buttons": {
         "readMore": "Читать далее",
         "learnMore": "Узнать больше",
-        "contactUs": "Связаться с нами"
+        "contactUs": "Связаться с нами",
+        "bookAppointment": "Записаться на прием"
     },
     "common": {
         "loading": "Загрузка...",
@@ -116,8 +117,12 @@
             "address": "ул. Эли Ландау 7, Герцлия, Израиль"
         },
         "mainTitle": {
-            "title": "Салон Массажа предлагает разные виды массажа и курсы массажа по отличным ценам",
-            "description": "Для нас массаж - это про любовь Массаж поможет улучшить ваше состояние и настроить организм на самовосстановление. Приходите в центр Крылья Ветра, доверьтесь опытным мастерам, которые составят специально для вас уникальную программу, куда включат наиболее эффективные и результативные процедуры."
+            "title": "Доктор Сергей Туницкий - Современная гинекология и хирургическое лечение",
+            "description": "Доктор Сергей Туницкий – известный израильский врач-гинеколог, специалист высшей категории, признанный эксперт по лечению всех форм женского бесплодия и заболеваний женской репродуктивной системы. Он применяет современные клинические протоколы, малоинвазивные хирургические методики и индивидуальный подход к каждой пациентке.\n\nСтаж клинической деятельности доктора Туницкого превышает 25 лет. Его опыт в диагностике, хирургическом лечении и профилактике гинекологических заболеваний делает его одним из самых востребованных специалистов в Израиле.",
+            "biography": "Биография и клинический опыт",
+            "biographyText": "Доктор Сергей Туницкий прошёл путь от выпускника медицинского института до главного врача гинекологического отделения и ведущего хирурга.\n\nКлинические должности:\n• Главный врач гинекологического отделения больницы «Гилель-Яфе»\n• Ведущий гинеколог «Герцлия Медикал Центр»\n\nОн совмещает лечебную практику, преподавательскую деятельность и участие в международных конференциях по гинекологии, постоянно совершенствуя профессиональные навыки.",
+            "subtitle": "Эксперт в области женского здоровья",
+            "learnMore": "Узнать больше"
         },
         "attributes": {
             "massageTitle": "Основные элементы массажа",
@@ -166,21 +171,8 @@
         "retry": "Попробовать снова",
         "goHome": "На главную"
     },
-    "buttons": {
-        "bookAppointment": "Записаться на прием"
-    },
     "modal": {
         "appointmentText": "Спасибо за ваш интерес к записи на прием к доктору Сержу Туницкому. Пожалуйста, заполните форму ниже, и мы свяжемся с вами в ближайшее время для подтверждения записи."
-    },
-    "info": {
-        "mainTitle": {
-            "title": "Доктор Сергей Туницкий - Современная гинекология и хирургическое лечение",
-            "description": "Доктор Сергей Туницкий – известный израильский врач-гинеколог, специалист высшей категории, признанный эксперт по лечению всех форм женского бесплодия и заболеваний женской репродуктивной системы. Он применяет современные клинические протоколы, малоинвазивные хирургические методики и индивидуальный подход к каждой пациентке.\n\nСтаж клинической деятельности доктора Туницкого превышает 25 лет. Его опыт в диагностике, хирургическом лечении и профилактике гинекологических заболеваний делает его одним из самых востребованных специалистов в Израиле.",
-            "biography": "Биография и клинический опыт",
-            "biographyText": "Доктор Сергей Туницкий прошёл путь от выпускника медицинского института до главного врача гинекологического отделения и ведущего хирурга.\n\nКлинические должности:\n• Главный врач гинекологического отделения больницы «Гилель-Яфе»\n• Ведущий гинеколог «Герцлия Медикал Центр»\n\nОн совмещает лечебную практику, преподавательскую деятельность и участие в международных конференциях по гинекологии, постоянно совершенствуя профессиональные навыки.",
-            "subtitle": "Эксперт в области женского здоровья",
-            "learnMore": "Узнать больше"
-        }
     },
     "trustCareBanner": {
         "title": "Доверие и забота — ваш источник покоя и здоровья"
