--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -196,5 +196,20 @@
             "title": "الزوائد اللحمية",
             "description": "إزالة زوائد بطانة الرحم وعنق الرحم من خلال تقنيات جراحية بالمنظار الرحمي وطرق طفيفة التوغل أخرى."
         }
+    },
+    "stories": {
+        "title": "قصص النجاح",
+        "fertility": {
+            "title": "الحفاظ على الخصوبة: إزالة كيس المبيض بدون شقوق",
+            "description": "جراحة بالمنظار طفيفة التوغل تحافظ على الوظيفة الإنجابية"
+        },
+        "myomectomy": {
+            "title": "إزالة ورم الرحم الليفي مع الحفاظ على العضو: قصة الأمومة",
+            "description": "علاج ناجح يحافظ على القدرة على الحمل وإنجاب طفل"
+        },
+        "polyp": {
+            "title": "إزالة لطيفة للزوائد اللحمية: حل مشاكل العقم",
+            "description": "إجراء بالمنظار الرحمي يعيد الخصوبة والأمل للمستقبل"
+        }
     }
 }
