--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -196,5 +196,20 @@
       "title": "Polypes",
       "description": "Ablation des polypes endométriaux et cervicaux par des techniques chirurgicales hystéroscopiques et autres minimalement invasives."
     }
+  },
+  "stories": {
+    "title": "Histoires de succès",
+    "fertility": {
+      "title": "Préservation de la fertilité : ablation de kyste ovarien sans incisions",
+      "description": "Chirurgie laparoscopique minimalement invasive préservant la fonction reproductive"
+    },
+    "myomectomy": {
+      "title": "Ablation de fibrome utérin avec préservation d'organe : une histoire de maternité",
+      "description": "Traitement réussi maintenant la capacité de concevoir et de porter un enfant"
+    },
+    "polyp": {
+      "title": "Ablation douce de polype : résolution des problèmes d'infertilité",
+      "description": "Procédure hystéroscopique restaurant la fertilité et l'espoir pour l'avenir"
+    }
   }
 }
