--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -196,5 +196,20 @@
       "title": "פוליפים",
       "description": "הסרת פוליפים של רירית הרחם וצוואר הרחם באמצעות טכניקות כירורגיות היסטרוסקופיות ופולשניות מינימלית אחרות."
     }
+  },
+  "stories": {
+    "title": "סיפורי הצלחה",
+    "fertility": {
+      "title": "שימור פוריות: הסרת ציסטה שחלתית ללא חתכים",
+      "description": "ניתוח לפרוסקופי פולשני מינימלי השומר על תפקוד הרבייה"
+    },
+    "myomectomy": {
+      "title": "הסרת מיומה רחמית עם שימור איבר: סיפור אימהות",
+      "description": "טיפול מוצלח השומר על היכולת להרות ולשאת ילד"
+    },
+    "polyp": {
+      "title": "הסרה עדינה של פוליפ: פתרון בעיות פוריות",
+      "description": "הליך היסטרוסקופי המחזיר פוריות ותקווה לעתיד"
+    }
   }
 }
