--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -212,5 +212,20 @@
             "title": "Полипы",
             "description": "Удаление эндометриальных и цервикальных полипов с помощью гистероскопических и других малоинвазивных хирургических техник."
         }
+    },
+    "stories": {
+        "title": "Успешные истории",
+        "fertility": {
+            "title": "Сохранение фертильности: удаление кисты яичника без разрезов",
+            "description": "Малоинвазивная лапароскопическая операция с сохранением репродуктивной функции"
+        },
+        "myomectomy": {
+            "title": "Удаление миомы матки с сохранением органа: история материнства",
+            "description": "Успешное лечение с сохранением возможности зачатия и вынашивания ребенка"
+        },
+        "polyp": {
+            "title": "Щадящее удаление полипа: решение проблемы бесплодия",
+            "description": "Гистероскопическая процедура, восстанавливающая фертильность и надежду на будущее"
+        }
     }
 }
