Cange color title

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -200,15 +200,15 @@
     "stories": {
         "title": "قصص النجاح",
         "fertility": {
-            "title": "الحفاظ على الخصوبة: إزالة كيس المبيض بدون شقوق",
+            "title": "إزالة كيس المبيض بدون ألم وتعافي مطول",
             "description": "جراحة بالمنظار طفيفة التوغل تحافظ على الوظيفة الإنجابية"
         },
         "myomectomy": {
-            "title": "إزالة ورم الرحم الليفي مع الحفاظ على العضو: قصة الأمومة",
+            "title": "إزالة ورم الرحم الليفي مع الحفاظ على العضو",
             "description": "علاج ناجح يحافظ على القدرة على الحمل وإنجاب طفل"
         },
         "polyp": {
-            "title": "إزالة لطيفة للزوائد اللحمية: حل مشاكل العقم",
+            "title": "إزالة بالمنظار الرحمي للزوائد اللحمية البطانية",
             "description": "إجراء بالمنظار الرحمي يعيد الخصوبة والأمل للمستقبل"
         }
     }
