--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -200,15 +200,15 @@
   "stories": {
     "title": "Erfolgsgeschichten",
     "fertility": {
-      "title": "Fruchtbarkeitserhaltung: Eierstockzystenentfernung ohne Schnitte",
+      "title": "Eierstockzystenentfernung ohne Schmerzen und verlängerte Genesung",
       "description": "Minimalinvasive laparoskopische Chirurgie mit Erhaltung der Fortpflanzungsfunktion"
     },
     "myomectomy": {
-      "title": "Gebärmuttermyom-Entfernung mit Organerhaltung: Eine Mutterschaftsgeschichte",
+      "title": "Gebärmuttermyom-Entfernung mit Organerhaltung",
       "description": "Erfolgreiche Behandlung mit Erhaltung der Fähigkeit zu empfangen und ein Kind auszutragen"
     },
     "polyp": {
-      "title": "Sanfte Polypenentfernung: Lösung von Unfruchtbarkeitsproblemen",
+      "title": "Hysteroskopische Entfernung von Endometriumpolypen",
       "description": "Hysteroskopisches Verfahren zur Wiederherstellung der Fruchtbarkeit und Hoffnung für die Zukunft"
     }
   }
