--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -216,15 +216,15 @@
   "stories": {
     "title": "Success Stories",
     "fertility": {
-      "title": "Fertility Preservation: Ovarian Cyst Removal Without Incisions",
+      "title": "Ovarian cyst removal without pain and prolonged recovery",
       "description": "Minimally invasive laparoscopic surgery preserving reproductive function"
     },
     "myomectomy": {
-      "title": "Uterine Fibroid Removal with Organ Preservation: A Motherhood Story",
+      "title": "Uterine fibroid removal with organ preservation",
       "description": "Successful treatment maintaining the ability to conceive and carry a child"
     },
     "polyp": {
-      "title": "Gentle Polyp Removal: Solving Infertility Issues",
+      "title": "Hysteroscopic removal of endometrial polyp",
       "description": "Hysteroscopic procedure restoring fertility and hope for the future"
     }
   }
