--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -200,15 +200,15 @@
   "stories": {
     "title": "Histoires de succès",
     "fertility": {
-      "title": "Préservation de la fertilité : ablation de kyste ovarien sans incisions",
+      "title": "Ablation de kyste ovarien sans douleur et récupération prolongée",
       "description": "Chirurgie laparoscopique minimalement invasive préservant la fonction reproductive"
     },
     "myomectomy": {
-      "title": "Ablation de fibrome utérin avec préservation d'organe : une histoire de maternité",
+      "title": "Ablation de fibrome utérin avec préservation d'organe",
       "description": "Traitement réussi maintenant la capacité de concevoir et de porter un enfant"
     },
     "polyp": {
-      "title": "Ablation douce de polype : résolution des problèmes d'infertilité",
+      "title": "Ablation hystéroscopique de polype endométrial",
       "description": "Procédure hystéroscopique restaurant la fertilité et l'espoir pour l'avenir"
     }
   }
