--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -200,15 +200,15 @@
   "stories": {
     "title": "סיפורי הצלחה",
     "fertility": {
-      "title": "שימור פוריות: הסרת ציסטה שחלתית ללא חתכים",
+      "title": "הסרת ציסטה שחלתית ללא כאב והחלמה ממושכת",
       "description": "ניתוח לפרוסקופי פולשני מינימלי השומר על תפקוד הרבייה"
     },
     "myomectomy": {
-      "title": "הסרת מיומה רחמית עם שימור איבר: סיפור אימהות",
+      "title": "הסרת מיומה רחמית עם שימור איבר",
       "description": "טיפול מוצלח השומר על היכולת להרות ולשאת ילד"
     },
     "polyp": {
-      "title": "הסרה עדינה של פוליפ: פתרון בעיות פוריות",
+      "title": "הסרה היסטרוסקופית של פוליפ רירית הרחם",
       "description": "הליך היסטרוסקופי המחזיר פוריות ותקווה לעתיד"
     }
   }
