--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -216,15 +216,15 @@
     "stories": {
         "title": "Успешные истории",
         "fertility": {
-            "title": "Сохранение фертильности: удаление кисты яичника без разрезов",
+            "title": "Удаление кисты яичника без боли и длительного восстановления",
             "description": "Малоинвазивная лапароскопическая операция с сохранением репродуктивной функции"
         },
         "myomectomy": {
-            "title": "Удаление миомы матки с сохранением органа: история материнства",
+            "title": "Удаление миомы матки с сохранением органа",
             "description": "Успешное лечение с сохранением возможности зачатия и вынашивания ребенка"
         },
         "polyp": {
-            "title": "Щадящее удаление полипа: решение проблемы бесплодия",
+            "title": "Гистероскопическое удаление эндометриального полипа",
             "description": "Гистероскопическая процедура, восстанавливающая фертильность и надежду на будущее"
         }
     }
