--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -200,15 +200,15 @@
   "stories": {
     "title": "Historias de éxito",
     "fertility": {
-      "title": "Preservación de fertilidad: extracción de quiste ovárico sin incisiones",
+      "title": "Extracción de quiste ovárico sin dolor y recuperación prolongada",
       "description": "Cirugía laparoscópica mínimamente invasiva preservando la función reproductiva"
     },
     "myomectomy": {
-      "title": "Extracción de fibroma uterino con preservación de órgano: una historia de maternidad",
+      "title": "Extracción de fibroma uterino con preservación de órgano",
       "description": "Tratamiento exitoso manteniendo la capacidad de concebir y llevar un hijo"
     },
     "polyp": {
-      "title": "Extracción suave de pólipo: resolviendo problemas de infertilidad",
+      "title": "Extracción histeroscópica de pólipo endometrial",
       "description": "Procedimiento histeroscópico restaurando la fertilidad y esperanza para el futuro"
     }
   }
